- Mejoras en formulario de creación de ítems relacionados - Mejoras en ordenamiento del listado de Sprints - Se incluye la función file_exists para twit - Validación de archivos en la administración de attachments - Corrección de error de diseño en el buscador del Product Backlog - Mejoras generales

--- a/src/BackendBundle/Resources/public/css/style.css
+++ b/src/BackendBundle/Resources/public/css/style.css
@@ -67,6 +67,10 @@ and open the template in the editor.
     padding-left: 8px !important;
 }
 
+.small-margin-right {
+    margin-right: 8px !important;
+}
+
 .no-padding-right {
     padding-right: 0px !important;
 }
@@ -245,4 +249,8 @@ span.label-notification {
 
 .border-status-7 {
     border-left: 9px #f0ad4e solid; //postponed
+}
+
+.inline {
+    display: inline;
 }
