--- a/src/BackendBundle/Resources/views/Project/ProductBacklog/newRelatedItem.html.twig
+++ b/src/BackendBundle/Resources/views/Project/ProductBacklog/newRelatedItem.html.twig
@@ -38,7 +38,7 @@
                     <div class="col-xs-10 no-padding-left">
                         {{ form_label(form.priority)}}
                         {{ form_widget(form.priority, {'attr':{'style':'cursor:pointer;','onchange':'rangevalue.value=value','onmousemove':'rangevalue.value=value','onkeyup':'rangevalue.value=value'},}) }}
-                        <div class="col-lg-12 col-md-12 col-xs-12 no-padding-sides" style="margin-bottom: 18px;">
+                        <div class="col-lg-12 col-md-12 col-xs-12 no-padding-sides" style="margin-bottom: 8px;">
                             <span class="pull-left green-color">{{'backend.global.low'|trans}}</span>
                             <span class="pull-right red-color">{{'backend.global.high'|trans}}</span>
                         </div>
@@ -73,13 +73,18 @@
             </div>
             <div class="col-lg-12">
                 {{ form_widget(form._token) }} 
-                <button type="submit"class="btn btn-primary pull-right">{{ 'backend.global.create'|trans }}</button>
+                
+                {{ form_widget(form.saveAndExit, {'attr':{'class':'btn btn-primary pull-right'}}) }}
+                {{ form_widget(form.saveAndContinue, {'attr':{'class':'btn btn-primary pull-right small-margin-right'}}) }}
+                
+                
+                {#<button type="submit"class="btn btn-primary pull-right">{{ 'backend.global.create'|trans }}</button>#}
             </div>
         {{ form_end(form) }}
     </div>
 {% endblock %}
 {% block scripts %}
-    singleHtmlEditor('textarea', 160);
+    singleHtmlEditor('textarea', 150);
     
     {% if closeFancy %}
         closeFancyOnTime(true, 1);
