--- a/src/BackendBundle/Resources/views/Project/Sprint/backlog.html.twig
+++ b/src/BackendBundle/Resources/views/Project/Sprint/backlog.html.twig
@@ -85,7 +85,7 @@
         <div class="col-lg-12">
             <div class="rstable">
                 
-                <ol parent="{{constant('BackendBundle\\Entity\\Item::EMPTY_PARENT')}}" class="default vertical">
+                <ol parent="{{constant('BackendBundle\\Entity\\Item::EMPTY_PARENT')}}" class="default vertical col-lg-12 col-md-12 col-xs-12">
                 {% for item in sprintBacklog %}
                     
                     <li item-id='{{item.id}}' parent="{{constant('BackendBundle\\Entity\\Item::EMPTY_PARENT')}}" priority="{{item.priority|default(0)}}" class="backlog-item">
@@ -169,6 +169,11 @@
                 </div>
             </div>
         </div>
+        {% if sprintBacklog|length > 0 %}
+            <div class="col-lg-12">
+                <a href="{{path('backend_project_product_backlog_new',{'id':project.id, 'sprintId':sprint.id})}}" class="btn btn-primary pull-right">{{'backend.item.new'|trans}}</a>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
 
