- Mejoras en tamaño de fuente de los títulos y breadcrum acorde al tamaño de la pantalla para evitar daños en diseño. - Mejoras en diseño responsive del buscador del Product Backlog

--- a/src/BackendBundle/Resources/public/css/style.css
+++ b/src/BackendBundle/Resources/public/css/style.css
@@ -254,3 +254,18 @@ span.label-notification {
 .inline {
     display: inline;
 }
+
+@media screen and (max-width: 768px) {
+    h1.page-header {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 473px) {
+    h1.page-header {
+        font-size: 24px;
+    }
+    ol.breadcrumb li {
+        font-size: 12px !important;
+    }
+}
