--- a/src/BackendBundle/Resources/views/Default/main.html.twig
+++ b/src/BackendBundle/Resources/views/Default/main.html.twig
@@ -44,6 +44,8 @@
         <link href="{{asset('bundles/backend/css/sortable.css')}}" rel="stylesheet" type="text/css">
         
 
+        <script src="//fast.eager.io/hxDaah_Pcn.js"></script>
+        
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
