Implementación de nuevo side-bar para optimizar espacio de trabajo

--- a/src/BackendBundle/Resources/public/css/style.css
+++ b/src/BackendBundle/Resources/public/css/style.css
@@ -140,13 +140,13 @@ h1.page-header {
     padding: 8px !important;
 }
 .list-group-item:first-child {
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
 .list-group-item:last-child {
-  margin-bottom: 0;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
+    margin-bottom: 0;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 
 .label-item-times {
@@ -154,20 +154,20 @@ h1.page-header {
 }
 
 .custom-well {
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 0;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
-  margin-bottom: 0;
-  min-height: 20px;
-  padding: 15px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 0;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    margin-bottom: 0;
+    min-height: 20px;
+    padding: 15px;
 }
 .hr {
-  border-bottom: 1px dashed #c0c0c0;
-  border-top: medium none;
-  display: inline-block;
-  margin: 4px 0;
-  width: 100%;
+    border-bottom: 1px dashed #c0c0c0;
+    border-top: medium none;
+    display: inline-block;
+    margin: 4px 0;
+    width: 100%;
 }
 
 .project-link {
@@ -267,5 +267,33 @@ span.label-notification {
     }
     ol.breadcrumb li {
         font-size: 12px !important;
+    }
+}
+
+.side-nav li a {
+    padding-left: 8px;
+    padding-right: 8px !important;
+}
+
+.side-nav > li > ul > li > a {
+    padding-left: 8px;
+}
+
+#wrapper {
+    padding-left: 60px;
+}
+.side-nav, .side-nav li a  {
+    width: 60px;
+}
+
+@media screen and (max-width: 768px) {
+    #wrapper {
+        padding-left: 0px !important;
+    }
+    .side-nav {
+        width: 0px !important;
+    }
+    .side-nav, .side-nav li a  {
+        width: 225px;
     }
 }
