--- a/src/BackendBundle/Resources/views/Project/view.html.twig
+++ b/src/BackendBundle/Resources/views/Project/view.html.twig
@@ -86,7 +86,7 @@
                 </div>
                 <a href="{{ path('backend_project_team', { 'id': project.id }) }}">
                     <div class="panel-footer">
-                        <span class="pull-left">{{ 'backend.user_project.project_team'|trans }}</span>
+                        <span class="pull-left">{{ 'backend.user_project.team'|trans }}</span>
                         <div class="clearfix"></div>
                     </div>
                 </a>
