--- a/src/BackendBundle/Resources/views/Default/main.html.twig
+++ b/src/BackendBundle/Resources/views/Default/main.html.twig
@@ -43,7 +43,6 @@
         <!-- Sortable Styles -->
         <link href="{{asset('bundles/backend/css/sortable.css')}}" rel="stylesheet" type="text/css">
         
-
         <script src="//fast.eager.io/hxDaah_Pcn.js"></script>
         
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -117,18 +116,38 @@
                 /* Codigo para eventos de fancybox */
                 $(".fancybox").fancybox();
 
-                {#/* Codigo para eventos de popovers */
+                /* Codigo para eventos de popovers */
                 $('.popover-menu').each(function(){
                     var object = $(this);
                     var title = object.attr('title');
                     var content = object.attr('content');
                     object.popover({title: title, content: content, html: true, placement: "auto", trigger: "hover"});
-                });#}
-
+                });
+                
                 /* Validacion para saber si estamos en un dispositivo mobile o no */
                 if ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
                     is_mobile_device = true;
                 }
+                
+                $(".navbar-header button.navbar-toggle").click(function() {
+                    if ($(".navbar-ex1-collapse").attr('aria-expanded') == 'true') {
+                        $(".side-nav span.nav-title").addClass('hidden');
+                    } else {
+                        $(".side-nav span.nav-title").removeClass('hidden');
+                    }
+                    $(".side-nav li a").css('width','225px');
+                });
+                
+                $( window ).resize(function() {
+                    var windowWidth = $( window ).width();
+                    if (windowWidth <= 753) {
+                        $(".side-nav span.nav-title").removeClass('hidden');
+                        $(".side-nav li a").css('width','225px');
+                    } else {
+                        $(".side-nav span.nav-title").addClass('hidden');
+                        $(".side-nav li a").css('width','60px');
+                    }
+                });
 
                 {% block scripts %}
                 {% endblock %}
