Internacionalización del Frontend (Español / Ingles)

--- a/src/FrontendBundle/Resources/views/Default/header.html.twig
+++ b/src/FrontendBundle/Resources/views/Default/header.html.twig
@@ -16,19 +16,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{ path('frontend_homepage') }}">Home</a>
+                    <a href="{{ path('frontend_homepage') }}">{{'frontend.pages.home'|trans}}</a>
                 </li>
                 <li>
-                    <a href="{{ path('frontend_features') }}">Features</a>
+                    <a href="{{ path('frontend_features') }}">{{'frontend.pages.features'|trans}}</a>
                 </li>
                 <li>
-                    <a href="{{ path('frontend_why_agile_scrum') }}">Why Agile Scrum?</a>
+                    <a href="{{ path('frontend_why_agile_scrum') }}">{{'frontend.pages.why'|trans}}</a>
                 </li>
                 <li>
-                    <a href="{{ path('frontend_create_account') }}">Create Account</a>
+                    <a href="{{ path('frontend_create_account') }}">{{'frontend.pages.create_account'|trans}}</a>
                 </li>
                 <li>
-                    <a href="{{ path('backend_login') }}">Sign In</a>
+                    <a href="{{ path('backend_login') }}">{{'frontend.pages.sign_in'|trans}}</a>
                 </li>
             </ul>
         </div>
