Enlaces para cambiar de idioma en el Frontend

--- a/src/FrontendBundle/Resources/views/Default/footer.html.twig
+++ b/src/FrontendBundle/Resources/views/Default/footer.html.twig
@@ -28,6 +28,19 @@
                         </a>
                     </li>
                 </ul>
+                
+                {% set request_method =  app.request.method %}
+                {% set currentPath = 'frontend_homepage' %}
+                {% set params = {} %}
+                {% if request_method == 'GET' %}
+                    {% set currentPath = app.request.attributes.get('_route') %}
+                    {% set params = app.request.attributes.get('_route_params') %}
+                {% endif %}
+                <p class="copyright text-muted">
+                    <a href="{{ path(currentPath, params|merge({'_locale':'es'})) }}" title="{{'frontend.lang.spanish'|trans}}"><img src="{{ asset('bundles/backend/images/lang/spanish.png') }}" style="cursor: pointer; width: 26px;"/></a> &nbsp;
+                    <a href="{{ path(currentPath, params|merge({'_locale':'en'})) }}" title="{{'frontend.lang.english'|trans}}"><img src="{{ asset('bundles/backend/images/lang/english.png') }}" style="cursor: pointer; width: 26px;"/></a>
+                </p>
+                
                 <p class="copyright text-muted">Agile Scrum {{'now'|date('Y')}}</p>
             </div>
         </div>
