--- a/src/BackendBundle/Resources/views/Project/view.html.twig
+++ b/src/BackendBundle/Resources/views/Project/view.html.twig
@@ -109,6 +109,23 @@
                 </a>
             </div>
         </div>
+        <div class="col-lg-2 col-md-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading project-link">
+                    <div class="row">
+                        <div class="col-xs-12 text-center">
+                            <i class="fa fa-clock-o fa-5x"></i>
+                        </div>
+                    </div>
+                </div>
+                <a href="{{ path('backend_time_tracking') }}">
+                    <div class="panel-footer">
+                        <span class="pull-left">{{ 'backend.time_tracking.time_tracking'|trans }}</span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
     
     <div class="col-lg-6 col-md-6 col-xs-12 no-padding-sides">                    
