--- a/src/BackendBundle/Resources/views/TimeTracking/index.html.twig
+++ b/src/BackendBundle/Resources/views/TimeTracking/index.html.twig
@@ -45,11 +45,11 @@
                 <div class="col-xs-12 text-center">
                     {{ form_widget(form._token) }} 
                     {% if time_track.startTime is empty %}
-                        <button type="submit" id="start-time" class="btn btn-primary btn-lg pull-right">{{ 'backend.time_tracking.start'|trans }}</button>
-                        <a id="stop-time" class="btn btn-danger btn-lg hidden">{{ 'backend.time_tracking.stop'|trans }}</a>
+                        <button type="submit" id="start-time" class="btn btn-primary btn-md">{{ 'backend.time_tracking.start'|trans }}</button>
+                        <a id="stop-time" time-id="" class="btn btn-danger btn-md hidden">{{ 'backend.time_tracking.stop'|trans }}</a>
                     {% else %}
-                        <button type="submit" id="start-time" class="btn btn-primary btn-lg pull-right hidden">{{ 'backend.time_tracking.start'|trans }}</button>
-                        <a id="stop-time" class="btn btn-danger btn-lg">{{ 'backend.time_tracking.stop'|trans }}</a>
+                        <button type="submit" id="start-time" class="btn btn-primary btn-md hidden">{{ 'backend.time_tracking.start'|trans }}</button>
+                        <a id="stop-time" time-id="{{time_track.id}}" class="btn btn-danger btn-md">{{ 'backend.time_tracking.stop'|trans }}</a>
                     {% endif %}
                 </div>
             </div>
@@ -58,146 +58,168 @@
     </div>
 
     <div class="row">
-        <div class="table-responsive col-lg-12">
-            <table class="table table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th>{{ 'backend.global.date'|trans }}</th>
-                        <th>{{ 'backend.item.description'|trans }}</th>
-                        <th>{{ 'backend.project.name'|trans }}</th>
-                        <th>{{ 'backend.time_tracking.time'|trans }}</th>
-                        <th>{{ 'backend.global.options'|trans }}</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% set dateFormat = app_settings.getDefaultDateFormat() %}
-                    {% set hourFormat = app_settings.getDefaultHourFormat() %}
-                    {% for time in time_tracking %}
-                        <tr>
-                            <td>{{ time.date|date(dateFormat) }}</td>
-                            <td>{{ time }}</td>
-                            <td>{{ time.project.name }}</td>
-                            <td>
-                                {{ time.workedTime }}
-                                <br>
-                                {{ time.startTime|date(hourFormat) }} - {{ time.endTime|date(hourFormat) }}
-                            </td>
-                            <td>
-                                <a class="btn btn-danger btn-md delete-time" time-id="{{time.id}}" title="" href="javascript:void(0);">
-                                    <i class="fa fa-times"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td colspan="5">{{ 'backend.time_tracking.empty_list'|trans }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+        <div class="table-responsive col-lg-12" id="time-list">
+            {% include 'BackendBundle:TimeTracking:timeList.html.twig' %}
         </div>
     </div>
 {% endblock %}
 
 {% block functions_javascript %}
     var clock;
+    
+    /**
+     * Permite actualizar la lista de tiempos del usuario
+     **/
+    function updateTimeList() {
+        $.ajax({
+            type: 'POST',
+            url: "{{ path('backend_time_update_time_tracking_list') }}",
+            dataType: 'json',
+            success: function (resp)
+            {
+                if (resp.result == '__OK__') {
+                    $("#time-list").html(resp.html);
+                } 
+            }
+        });
+    }
 {% endblock %}
 
 {% block scripts %}
-        {% if time_track.startTime is not empty %}
-            clock = $('.clock').FlipClock({
-                clockFace: 'HourlyCounter'
-            });
+    clock = $('.clock').FlipClock({
+        clockFace: 'HourlyCounter'
+    });
+    {% if time_track.startTime is not empty %}
+        clock.setTime({{time_track.workedTime}});
+    {% else %}
+        clock.stop();
+    {% endif %}
 
-            clock.setTime(600);
+    $("#backendbundle_time_track_type_taskId").select2({
+        placeholder: "{{'backend.time_tracking.select_task'|trans}}",
+        allowClear: true,
+    });
+    $("span.select2-selection").css('height', '34px');
+    $("span.select2-container--default").css('width', '100%');
 
-            //clock.start(function() {
-            // this (optional) callback will fire each time the clock flips
-            //});
+    {# Codigo para cargar las tareas activas de un proyecto en especifico #}
+    $("#backendbundle_time_track_type_project").change(function () {
+        var object = $(this);
+        var projectId = object.val();
 
-            // clock.stop(function() {
-            // this (optional) callback will fire after the clock stops
-            //});
+        if (projectId != '') {
 
-            //var time  = clock.getTime();
-        {% endif %}
-
-        $("#backendbundle_time_track_type_taskId").select2({
-            placeholder: "{{'backend.time_tracking.select_task'|trans}}",
-            allowClear: true,
-        });
-        $("span.select2-selection").css('height', '34px');
-        $("span.select2-container--default").css('width', '100%');
-
-        {# Codigo para cargar las tareas de un proyecto en especifico #}
-        $("#backendbundle_time_track_type_project").change(function () {
-            var object = $(this);
-            var projectId = object.val();
-
-            if (projectId != '') {
-
-                $("#backendbundle_time_track_type_taskId").attr('disabled', 'disabled');
-                $("#backendbundle_time_track_type_taskId").select2("val", "");
-                $.ajax({
-                    type: 'POST',
-                    url: "{{path('backend_time_tracking_get_project_items')}}",
-                    dataType: 'json',
-                    data: {projectId: projectId},
-                    async: false,
-                    success: function (resp)
-                    {
-                        $("#backendbundle_time_track_type_taskId").removeAttr('disabled');
-                        if (resp.result == '__OK__') {
-                            $("#backendbundle_time_track_type_taskId").html(resp.data.html);
-                        } else {
-                            bootbox.alert(resp.msg);
-                        }
-                    },
-                    error: function (resp)
-                    {
-                        $("#backendbundle_time_track_type_taskId").removeAttr('disabled');
-                        bootbox.alert("{{'backend.global.unknown_error'|trans}}");
-                    }
-                });
-            }
-        });
-
-        $("#backendbundle_time_track_type_project").trigger('change');
-
-
-        {# Codigo para enviar a almacenar la cita #}
-        $("#form-time").submit(function (e) {
-            e.preventDefault();
-
-            $("#start-time").attr('disabled', 'disabled');
-
+            $("#backendbundle_time_track_type_taskId").attr('disabled', 'disabled');
+            $("#backendbundle_time_track_type_taskId").select2("val", "");
             $.ajax({
                 type: 'POST',
-                url: "{{ path('backend_time_tracking_start_time') }}",
+                url: "{{path('backend_time_tracking_get_project_items')}}",
                 dataType: 'json',
-                data: $("#form-time").serialize(),
+                data: {projectId: projectId},
+                async: false,
                 success: function (resp)
                 {
-                    $("#start-time").removeAttr('disabled');
-
+                    $("#backendbundle_time_track_type_taskId").removeAttr('disabled');
                     if (resp.result == '__OK__') {
-                        $("#start-time").addClass('hidden');
-                        $("#stop-time").removeClass('hidden');
-                        console.log(resp);
-
+                        $("#backendbundle_time_track_type_taskId").html(resp.data.html);
                     } else {
                         bootbox.alert(resp.msg);
                     }
                 },
                 error: function (resp)
                 {
-                    $("#saveDiary").removeAttr('disabled');
+                    $("#backendbundle_time_track_type_taskId").removeAttr('disabled');
                     bootbox.alert("{{'backend.global.unknown_error'|trans}}");
                 }
             });
-        });
+        }
+    });
 
-        $("#stop-time").click(function () {
-            console.log('vamos a detener el tiempo');
-        });
-    {% endblock %}
+    $("#backendbundle_time_track_type_project").trigger('change');
+
+
+    {# Codigo para iniciar el contador de tiempo para una tarea especifica #}
+    $("#form-time").submit(function (e) {
+        e.preventDefault();
+
+        var projectId = $("#backendbundle_time_track_type_project").val();
+        var task = $("#backendbundle_time_track_type_taskId").val();
+        var taskDescription = $("#backendbundle_time_track_type_description").val();
+
+        if (projectId != '') {
+            if (task != '' || (task == '' && taskDescription != '')) {
+                $("#start-time").attr('disabled', 'disabled');
+
+                $.ajax({
+                    type: 'POST',
+                    url: "{{ path('backend_time_tracking_start_time') }}",
+                    dataType: 'json',
+                    data: $("#form-time").serialize(),
+                    success: function (resp)
+                    {
+                        $("#start-time").removeAttr('disabled');
+
+                        if (resp.result == '__OK__') {
+                            $("#start-time").addClass('hidden');
+                            $("#stop-time").removeClass('hidden');
+                            $("#stop-time").attr('time-id', resp.timeId)
+                            clock.setTime(0);
+                            clock.start();
+                        } else {
+                            bootbox.alert(resp.msg);
+                        }
+                    },
+                    error: function (resp)
+                    {
+                        $("#start-time").removeAttr('disabled');
+                        bootbox.alert("{{'backend.global.unknown_error'|trans}}");
+                    }
+                });
+            } else {
+                bootbox.alert("{{'backend.time_tracking.select_task_warning'|trans}}");
+            }
+        } else {
+            bootbox.alert("{{'backend.time_tracking.select_project_warning'|trans}}");
+        }
+    });
+
+    {# Codigo para detener el tiempo de una tarea ya iniciada #}
+    $("#stop-time").click(function () {
+        var object = $(this);
+        var timeId = object.attr('time-id');
+
+        if (timeId != '') {
+            $("#stop-time").attr('disabled', 'disabled');
+
+            $.ajax({
+                type: 'POST',
+                url: "{{ path('backend_time_tracking_stop_time') }}",
+                dataType: 'json',
+                data: {timeId: timeId},
+                success: function (resp)
+                {
+                    $("#stop-time").removeAttr('disabled');
+
+                    if (resp.result == '__OK__') {
+                        $("#stop-time").addClass('hidden');
+                        $("#start-time").removeClass('hidden');
+                        $("#stop-time").attr('time-id', '')
+                        clock.setTime(0);
+                        clock.stop();
+                        $("#backendbundle_time_track_type_taskId").select2("val", "");
+                        $("#backendbundle_time_track_type_description").val('');
+                        
+                        updateTimeList();
+                    } else {
+                        bootbox.alert(resp.msg);
+                    }
+                },
+                error: function (resp)
+                {
+                    $("#stop-time").removeAttr('disabled');
+                    bootbox.alert("{{'backend.global.unknown_error'|trans}}");
+                }
+            });
+        }
+    });
+{% endblock %}
